--- a/natural_language_processing/src/parameters/primary.yml
+++ b/natural_language_processing/src/parameters/primary.yml
@@ -2,14 +2,9 @@
 
 players_col: players
 
-conversation_id_col: conversation_id
+conversation_col: conversation_id
 
 value1: sender_labels
 value2: receiver_labels
 
 messages_col: messages
-
-drop_original: True
-
-
-
