--- a/natural_language_processing/environment.yml
+++ b/natural_language_processing/environment.yml
@@ -17,3 +17,5 @@ dependencies:
   - pytorch=2.3.1
   - scikit-learn=1.4.0
   - feature_engine=1.8.0
+  - imbalanced-learn=0.12.0
+  - accelerate=0.32.1
