--- a/natural_language_processing/src/parameters/catalog.yml
+++ b/natural_language_processing/src/parameters/catalog.yml
@@ -30,3 +30,11 @@ feature_data_validation_path: data_feature_validation.parquet
 
 #--
 
+model_input_data_train_path: data_model_input_train.parquet
+model_input_data_test_path: data_model_input_test.parquet
+model_input_data_validation_path: data_model_input_validation.parquet
+
+#--
+
+model_training_data_path: data_model_training.pickle
+
