--- a/natural_language_processing/src/parameters/models.yml
+++ b/natural_language_processing/src/parameters/models.yml
@@ -2,10 +2,15 @@
 
 num_features: 11
 
+
+batch_size: 16
+learning_rate: 0.00003
+num_epochs: 10
+early_stop_patience: 2
 num_train_epochs: 1
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 12
-warmup_steps: 50
+warmup_steps: 0
 weight_decay: 0.01
 
 output_dir: "/Users/agomezj/Desktop/Data Science/Proyectos/inteligencia_digital/natural_language_processing/data/05_models"
